# limit-order-book

./: .dockerignore  .gitignore  Dockerfile  docker-compose.yml  package-lock.json  pyproject.toml
order_book_app/: manage.py
order_book_app/jwt_auth/: serializers.py  urls.py  views.py
order_book_app/order_book_app/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
order_book_app/orders/: models.py  serializers.py  tasks.py  urls.py  views.py
order_book_app/orders/migrations/: 0001_initial.py
order_book_ui/: package-lock.json  package.json
order_book_ui/src/: App.css  App.js  api.js  index.css  index.js
order_book_ui/src/components/: CreateOrder.css  CreateOrder.js  Layout.css  Layout.js  LimitOrderBook.css  LimitOrderBook.js  Login.css  Login.js  OrderItem.css  OrderItem.js  OrderList.css  OrderList.js  Sidebar.css  Sidebar.js  TransactionsHistory.js  TransactionsHistoryItem.js
